--- a/notebook/example.ipynb
+++ b/notebook/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "DataIngestionConfig(dataset_download_url='hsgjhs', tgz_download_dir='jhsjhxv', raw_data_dir='hjgsjh', ingested_train_dir='jahjkx', ingested_test_dir='jsxjsb')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "'e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "'e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,7 @@
        " 'config',\n",
        " 'Dockerfile',\n",
        " 'housing',\n",
+       " 'housing_logs',\n",
        " 'housing_predictor.egg-info',\n",
        " 'LICENSE',\n",
        " 'notebook',\n",
@@ -175,7 +176,7 @@
        " '__pycache__']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +197,7 @@
        "['config.yaml']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
        "'config\\\\config.yaml'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +247,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +298,7 @@
        " 'model_pusher_config': {'model_export_dir': 'saved_models'}}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +364,7 @@
        " 'model_pusher_config': {'model_export_dir': 'saved_models'}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +393,7 @@
        "'training_pipeline_config'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
        "'housing'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +445,7 @@
        "'e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,16 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = Configuration()"
+    "config = Configuration(config_file_path=\"e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\config\\\\config.yaml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -482,13 +483,63 @@
        "TrainingPipelineConfig(artifact_dir='e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "config.get_training_pipeline_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<housing.config.configuration.Configuration at 0x1f7cb511630>"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from housing.constant import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'DATA_INGESTION_CONFIG_KEY' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17852\\1577016751.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mconfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconfig_info\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mDATA_INGESTION_CONFIG_KEY\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'DATA_INGESTION_CONFIG_KEY' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "config.config_info[DATA_INGESTION_CONFIG_KEY]"
    ]
   },
   {
