--- a/notebook/example.ipynb
+++ b/notebook/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "DataIngestionConfig(dataset_download_url='hsgjhs', tgz_download_dir='jhsjhxv', raw_data_dir='hjgsjh', ingested_train_dir='jahjkx', ingested_test_dir='jsxjsb')"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project'"
+       "'e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\notebook'"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "'e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project'"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        " '__pycache__']"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "['config.yaml']"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "'config\\\\config.yaml'"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "True"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        " 'model_pusher_config': {'model_export_dir': 'saved_models'}}"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        " 'model_pusher_config': {'model_export_dir': 'saved_models'}}"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "'training_pipeline_config'"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "'housing'"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "'e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact'"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "TrainingPipelineConfig(artifact_dir='e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact')"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,16 +494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<housing.config.configuration.Configuration at 0x1f7cb511630>"
+       "<housing.config.configuration.Configuration at 0x1f3d0d25710>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,23 +523,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_ingestion_info = config.config_info[DATA_INGESTION_CONFIG_KEY]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'DATA_INGESTION_CONFIG_KEY' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17852\\1577016751.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mconfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconfig_info\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mDATA_INGESTION_CONFIG_KEY\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'DATA_INGESTION_CONFIG_KEY' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "config.config_info[DATA_INGESTION_CONFIG_KEY]"
+    "data_ingestion_info[DATA_INGESTION_DOWNLOAD_URL_KEY]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_pipeline_config = config.get_training_pipeline_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact_dir = training_pipeline_config.artifact_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "artifact_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data_ingestion'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DATA_INGESTION_ARTIFACT_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-11-04-11-00-30'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CURRENT_TIME_STAMP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataIngestionConfig(dataset_download_url='https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz', tgz_download_dir='e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-11-04-11-00-30\\\\raw_data', raw_data_dir='e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-11-04-11-00-30\\\\raw_data', ingested_train_dir='e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-11-04-11-00-30\\\\ingested_data\\\\train', ingested_test_dir='e:\\\\Data\\\\FSDS\\\\54 11-06-2022 Machine Learning Project\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-11-04-11-00-30\\\\ingested_data\\\\test')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.get_data_ingestion_config()"
    ]
   },
   {
